--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=10; IE=11; IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Front End Developer portfolio website.">
-  <meta name="author" content="Dina Blaszczak">
+  <meta name="author" content="Indrat Saputra">
 
-  <title>Dina Blaszczak | Front End Developer Portfolio</title>
+  <title>Indrat Saputra | Mobile Developer Portfolio</title>
 
   <link rel="shortcut icon" href="images/icon.ico" type="image/x-icon" /><!-- Favicon -->
   <link rel="icon" href="images/icon.ico" type="image/x-icon" /><!-- Favicon -->
@@ -67,23 +67,23 @@
       </li>
     </ul>
     <hr class="nav-menu__separator">
-    <p class="nav-menu__text">Dina Blaszczak is a front-end developer and designer based in Poland.</p>
+    <p class="nav-menu__text">Indrat Saputra is a mobile developer based in Indonesia.</p>
     <p class="nav-menu__email">
-      <a href="mailto:dinablaszczak@outlook.com" class="nav-menu__link--email">dinablaszczak@outlook.com</a>
+      <a href="mailto:indrat.dev@gmail.com" class="nav-menu__link--email">indrat.dev@gmail.com</a>
     </p>
     <div class="nav-menu__social-btn">
-      <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a>
-      <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a>
-      <a href="https://github.com/Themalni" target="_blank"><span class="fa fa-github fa-2x"></span></a>
-      <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a>
-      <a href="https://www.linkedin.com/in/dina-blaszczak-5b380313a/" target="_blank"><span
+      <--! <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a> -->
+      <--! <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a> -->
+      <a href="https://github.com/indratdev" target="_blank"><span class="fa fa-github fa-2x"></span></a>
+      <--! <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a> -->
+      <a href="https://id.linkedin.com/in/indrat-saputra-40a08b190/" target="_blank"><span
           class="fa fa-linkedin-square fa-2x"></span></a>
     </div>
   </div>
   <!-- Header -->
   <header id="header" class="header">
-    <h1 class="header__title">Dina Blaszczak</h1>
-    <h3 class="header__subtitle">Front-End Developer</h3>
+    <h1 class="header__title">Indrat Saputra</h1>
+    <h3 class="header__subtitle">Mobile Developer</h3>
     <a href="#portfolio" class="header__btn">View portfolio</a>
     <div class="header__mouse__container">
       <img class="header__mouse" src="images/mouse_full.svg" alt="mouse">
@@ -101,10 +101,9 @@
           <img src="images/dina_large.jpg" srcset="images/dina_small.jpg 800w,
                         images/dina_medium.jpg 1100w,
                         images/dina_large.jpg 1400w" sizes="100vw" class="about__img__mobile" alt="autor portrait" />
-          <p class="about__text__description">Hello, my name is Dina. I am a Front-End Developer located in Poland.</p>
-          <p class="about__text__description">I design and develop websites and web applications using HTML, CSS and
-            JavaScript. When dealing with a project I pay attention to the smallest details addressing problems with
-            patience. Web design and development help me to free my creative mind and allow me satisfy my desire towards
+          <p class="about__text__description">Hello, my name is Indrat. I am a Mobile Developer located in Indonesia.</p>
+          <p class="about__text__description">I develop mobile application using Dart & Flutter. When dealing with a project I pay attention to the smallest details addressing problems with
+            patience. Mobile development help me to free my creative mind and allow me satisfy my desire towards
             constant self growth.</p>
           <a href="about-me.html" class="about__btn">Learn more</a>
         </div>
@@ -118,9 +117,7 @@
     <!-- Portfolio -->
     <section id="portfolio" class="portfolio">
       <h1 class="portfolio__title">Portfolio<span class="portfolio__title__dot"></span></h1>
-      <h3 class="portfolio__description">Examples of my latest projects build with HTML, CSS and JavaScript. My
-        portfolio includes static websites, web applications and illustrations made with pure CSS offering an insight
-        into my recent accomplishments.</h3>
+      <h3 class="portfolio__description">Examples of my latest projects build with Dart & Flutter.</h3>
       <div class="portfolio__nav__container">
         <button class="portfolio__nav__btn" data-btn-name="all-btn">All</button>
         <button class="portfolio__nav__btn" data-btn-name="websites-btn">Websites</button>
@@ -283,25 +280,28 @@
         </h1>
         <h2 class="contact__description">You can reach me via email or find me on social networks.<br> I would love to
           hear from you!</h2>
-        <a class="contact__link" href="mailto:dinablaszczak@outlook.com">dinablaszczak@outlook.com</a>
+        <a class="contact__link" href="mailto:indrat.dev@gmail.com">indrat.dev@gmail.com</a>
         <div class="contact__social-btn__container">
-          <a href="https://twitter.com/TheMalni" target="_blank" class="contact__btn__link">
+		
+        <!--  <a href="https://twitter.com/TheMalni" target="_blank" class="contact__btn__link">
             <span class="fa fa-twitter fa-2x"></span>
             <div class="contact__social-btn"></div>
-          </a>
-          <a href="https://codepen.io/themalni" target="_blank" class="contact__btn__link">
+          </a> -->
+		  
+          <!-- <a href="https://codepen.io/themalni" target="_blank" class="contact__btn__link">
             <span class="fa fa-codepen fa-2x contact__fa-btn"></span>
             <div class="contact__social-btn"></div>
           </a>
-          <a href="https://github.com/Themalni" target="_blank" class="contact__btn__link">
+		  -->
+          <a href="https://github.com/indratdev" target="_blank" class="contact__btn__link">
             <span class="fa fa-github fa-2x contact__fa-btn"></span>
             <div class="contact__social-btn"></div>
           </a>
-          <a href="https://youtube.com/user/TheMalni" target="_blank" class="contact__btn__link">
+         <!--  <a href="https://youtube.com/user/TheMalni" target="_blank" class="contact__btn__link">
             <span class="fa fa-youtube fa-2x contact__fa-btn"></span>
             <div class="contact__social-btn"></div>
-          </a>
-          <a href="https://www.linkedin.com/in/dina-blaszczak-5b380313a/" target="_blank" class="contact__btn__link">
+          </a> -->
+          <a href="https://id.linkedin.com/in/indrat-saputra-40a08b190/" target="_blank" class="contact__btn__link">
             <span class="fa fa-linkedin-square fa-2x contact__fa-btn"></span>
             <div class="contact__social-btn"></div>
           </a>
@@ -311,7 +311,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__info__container">
-        <h2 class="footer__copyright">&copy; Dina Blaszczak 2017</h2>
+        <h2 class="footer__copyright">&copy; Indrat Saputra 2017</h2>
         <!-- footer navigation -->
         <ul class="footer-menu__list">
           <li class="footer-menu__list-item">
@@ -326,11 +326,14 @@
         </ul>
         <!-- footer social buttons -->
         <div class="footer__social-btn">
+		<!--
           <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a>
           <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a>
-          <a href="https://github.com/Themalni" target="_blank"><span class="fa fa-github fa-2x"></span></a>
-          <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a>
-          <a href="https://www.linkedin.com/in/dina-blaszczak-5b380313a/" target="_blank"><span
+		   <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a>
+		   -->
+          <a href="https://github.com/indratdev" target="_blank"><span class="fa fa-github fa-2x"></span></a>
+         
+          <a href="https://id.linkedin.com/in/indrat-saputra-40a08b190/" target="_blank"><span
               class="fa fa-linkedin-square fa-2x"></span></a>
         </div>
       </div>
