--- a/about-me.html
+++ b/about-me.html
@@ -6,10 +6,10 @@
 
   <meta http-equiv="X-UA-Compatible" content="IE=10; IE=11; IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="About page of Dina Blaszczak, Front End Developer located in Poland.">
-  <meta name="author" content="Dina Blaszczak">
+  <meta name="description" content="About page of Indrat Saputra, Mobile Developer located in Indonesia.">
+  <meta name="author" content="Indrat Saputra">
 
-  <title>About me - Dina Blaszczak | Front End Developer</title>
+  <title>About me - Indrat Saputra | Mobile Developer</title>
 
   <link rel="shortcut icon" href="images/icon.ico" type="image/x-icon" /><!-- Favicon -->
   <link rel="icon" href="images/icon.ico" type="image/x-icon" /><!-- Favicon -->
@@ -70,15 +70,17 @@
       </li>
     </ul>
     <hr class="nav-menu__separator">
-    <p class="nav-menu__text">Dina Blaszczak is a front-end developer and designer based in Poland.</p>
+    <p class="nav-menu__text">Indrat Saputra is a front-end developer and designer based in Indonesia.</p>
     <p class="nav-menu__email">
-      <a href="mailto:dinablaszczak@outlook.com" class="nav-menu__link--email">dinablaszczak@outlook.com</a>
+      <a href="mailto:indrat.dev@gmail.com" class="nav-menu__link--email">indrat.dev@gmail.com</a>
     </p>
     <div class="nav-menu__social-btn">
+	<!--
       <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a>
       <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a>
-      <a href="https://github.com/Themalni" target="_blank"><span class="fa fa-github fa-2x"></span></a>
       <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a>
+	  -->
+	  <a href="https://github.com/Themalni" target="_blank"><span class="fa fa-github fa-2x"></span></a>
       <a href="#" target="_blank"><span class="fa fa-linkedin-square fa-2x"></span></a>
     </div>
   </div>
@@ -86,7 +88,7 @@
     <!-- Header -->
     <header class="about-me__header">
       <h1 class="about-me__title">About Me<span class="about-me__title__dot"></span></h1>
-      <h3 class="about-me__description">I'm a Front End Developer specialized in building websites and web apps with a
+      <h3 class="about-me__description">I'm a Mobile Developer specialized in building websites and web apps with a
         big interest in pure CSS illustrations and beautiful animations.</h3>
     </header>
     <main class="about-me__main">
@@ -304,12 +306,12 @@
     </main>
     <div class="about-me__email__container">
       <img class="about-me__email__icon" src="images/mail_white.svg" alt="email icon">
-      <a class="about-me__email" href="mailto:dinablaszczak@outlook.com">dinablaszczak@outlook.com</a>
+      <a class="about-me__email" href="mailto:indrat.dev@gmail.com">indrat.dev@gmail.com</a>
     </div>
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__info__container">
-        <h2 class="footer__copyright">&copy; Dina Blaszczak 2017</h2>
+        <h2 class="footer__copyright">&copy; Indrat Saputra 2017</h2>
         <!-- footer navigation -->
         <ul class="footer-menu__list">
           <li class="footer-menu__list-item">
