--- a/about-me.html
+++ b/about-me.html
@@ -70,7 +70,7 @@
       </li>
     </ul>
     <hr class="nav-menu__separator">
-    <p class="nav-menu__text">Indrat Saputra is a front-end developer and designer based in Indonesia.</p>
+    <p class="nav-menu__text">Indrat Saputra is a front-end developer based in Indonesia.</p>
     <p class="nav-menu__email">
       <a href="mailto:indrat.dev@gmail.com" class="nav-menu__link--email">indrat.dev@gmail.com</a>
     </p>
@@ -88,8 +88,8 @@
     <!-- Header -->
     <header class="about-me__header">
       <h1 class="about-me__title">About Me<span class="about-me__title__dot"></span></h1>
-      <h3 class="about-me__description">I'm a Mobile Developer specialized in building websites and web apps with a
-        big interest in pure CSS illustrations and beautiful animations.</h3>
+      <h3 class="about-me__description">I'm a Mobile Developer specialized in building mobile application with a
+        big interest in pure Dart & Flutter.</h3>
     </header>
     <main class="about-me__main">
       <div class="about-me__skills__flex">
@@ -311,7 +311,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__info__container">
-        <h2 class="footer__copyright">&copy; Indrat Saputra 2017</h2>
+        <h2 class="footer__copyright">&copy; Indrat Saputra 2012</h2>
         <!-- footer navigation -->
         <ul class="footer-menu__list">
           <li class="footer-menu__list-item">
