--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
       <a href="mailto:indrat.dev@gmail.com" class="nav-menu__link--email">indrat.dev@gmail.com</a>
     </p>
     <div class="nav-menu__social-btn">
-      <--! <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a> -->
-      <--! <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a> -->
+      <!-- <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a> -->
+      <!-- <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a> -->
+      <!-- <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a> -->
       <a href="https://github.com/indratdev" target="_blank"><span class="fa fa-github fa-2x"></span></a>
-      <--! <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a> -->
       <a href="https://id.linkedin.com/in/indrat-saputra-40a08b190/" target="_blank"><span
           class="fa fa-linkedin-square fa-2x"></span></a>
     </div>
@@ -98,9 +98,9 @@
       <h1 class="about__title">Get to know me<span class="about__title__dot"></span></h1>
       <div class="about__info__container">
         <div class="about__text">
-          <img src="images/dina_large.jpg" srcset="images/dina_small.jpg 800w,
-                        images/dina_medium.jpg 1100w,
-                        images/dina_large.jpg 1400w" sizes="100vw" class="about__img__mobile" alt="autor portrait" />
+          <img src="images/indrat_large.png" srcset="images/indrat_small.png 800w,
+                        images/indrat_medium.png 1100w,
+                        images/indrat_large.png 1400w" sizes="100vw" class="about__img__mobile" alt="autor portrait" />
           <p class="about__text__description">Hello, my name is Indrat. I am a Mobile Developer located in Indonesia.</p>
           <p class="about__text__description">I develop mobile application using Dart & Flutter. When dealing with a project I pay attention to the smallest details addressing problems with
             patience. Mobile development help me to free my creative mind and allow me satisfy my desire towards
@@ -108,9 +108,9 @@
           <a href="about-me.html" class="about__btn">Learn more</a>
         </div>
         <div class="about__img__container">
-          <img src="images/dina_large.jpg" srcset="images/dina_small.jpg 800w,
-                        images/dina_medium.jpg 1100w,
-                        images/dina_large.jpg 1400w" sizes="100vw" class="about__img" alt="autor portrait" />
+          <img src="images/indrat_large.png" srcset="images/indrat_small.png 800w,
+                        images/indrat_medium.png 1100w,
+                        images/indrat_large.png 1400w" sizes="100vw" class="about__img" alt="autor portrait" />
         </div>
       </div>
     </section>
@@ -120,9 +120,9 @@
       <h3 class="portfolio__description">Examples of my latest projects build with Dart & Flutter.</h3>
       <div class="portfolio__nav__container">
         <button class="portfolio__nav__btn" data-btn-name="all-btn">All</button>
-        <button class="portfolio__nav__btn" data-btn-name="websites-btn">Websites</button>
-        <button class="portfolio__nav__btn" data-btn-name="illustrations-btn">CSS Images</button>
-        <button class="portfolio__nav__btn" data-btn-name="apps-btn">Web Apps</button>
+        <button class="portfolio__nav__btn" data-btn-name="on-google-play-btn">on Google Play</button>
+        <button class="portfolio__nav__btn" data-btn-name="on-github-btn">on Github</button>
+        <!-- <button class="portfolio__nav__btn" data-btn-name="apps-btn">Web Apps</button> -->
       </div>
       <div class="portfolio__items-container">
         <div class="portfolio__item" data-name="website">
@@ -293,14 +293,15 @@
             <div class="contact__social-btn"></div>
           </a>
 		  -->
-          <a href="https://github.com/indratdev" target="_blank" class="contact__btn__link">
-            <span class="fa fa-github fa-2x contact__fa-btn"></span>
-            <div class="contact__social-btn"></div>
-          </a>
+         
          <!--  <a href="https://youtube.com/user/TheMalni" target="_blank" class="contact__btn__link">
             <span class="fa fa-youtube fa-2x contact__fa-btn"></span>
             <div class="contact__social-btn"></div>
           </a> -->
+           <a href="https://github.com/indratdev" target="_blank" class="contact__btn__link">
+            <span class="fa fa-github fa-2x contact__fa-btn"></span>
+            <div class="contact__social-btn"></div>
+          </a>
           <a href="https://id.linkedin.com/in/indrat-saputra-40a08b190/" target="_blank" class="contact__btn__link">
             <span class="fa fa-linkedin-square fa-2x contact__fa-btn"></span>
             <div class="contact__social-btn"></div>
@@ -311,7 +312,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__info__container">
-        <h2 class="footer__copyright">&copy; Indrat Saputra 2017</h2>
+        <h2 class="footer__copyright">&copy; Indrat Saputra 2022</h2>
         <!-- footer navigation -->
         <ul class="footer-menu__list">
           <li class="footer-menu__list-item">
