--- a/about-me.html
+++ b/about-me.html
@@ -70,7 +70,7 @@
       </li>
     </ul>
     <hr class="nav-menu__separator">
-    <p class="nav-menu__text">Indrat Saputra is a front-end developer based in Indonesia.</p>
+    <p class="nav-menu__text">Indrat Saputra is a mobile developer based in Indonesia.</p>
     <p class="nav-menu__email">
       <a href="mailto:indrat.dev@gmail.com" class="nav-menu__link--email">indrat.dev@gmail.com</a>
     </p>
@@ -96,26 +96,26 @@
         <!-- first skills item -->
         <div class="about-me__skills__item">
           <div class="about-me__skills__header">
-            <img class="about-me__skills__logo" src="images/HTML_large.png" alt="HTML logo">
+            <img class="about-me__skills__logo" src="images/dart.svg" alt="DART logo">
           </div>
           <div class="about-me__skills__middle">
-            <h1 class="about-me__skills__middle__name">HTML</h1>
+            <h1 class="about-me__skills__middle__name">DART</h1>
           </div>
           <p class="about-me__skills__text">I'm up to building fully <span
-              class="about-me__skills__text--accent">responsive</span> websites and web applications using <span
-              class="about-me__skills__text--accent">plain HTML</span> without relying on a framework.</p>
+              class="about-me__skills__text--accent">responsive</span> mobile applications using <span
+              class="about-me__skills__text--accent">plain DART</span> </p>
         </div>
         <!-- second skills item -->
         <div class="about-me__skills__item">
           <div class="about-me__skills__header">
-            <img class="about-me__skills__logo" src="images/CSS_large.png" alt="CSS logo">
+            <img class="about-me__skills__logo" src="images/fluter_logo.png" alt="fluter logo">
           </div>
           <div class="about-me__skills__middle">
-            <h1 class="about-me__skills__middle__name">CSS</h1>
+            <h1 class="about-me__skills__middle__name">Flutter</h1>
           </div>
-          <p class="about-me__skills__text">CSS is my <span class="about-me__skills__text--accent">favourite tool</span>
-            in Web Development. I enjoy using it to <span class="about-me__skills__text--accent">beautify</span> my
-            projects and play with it creating <span class="about-me__skills__text--accent">CSS illustrations.</span>
+          <p class="about-me__skills__text">Flutter is my <span class="about-me__skills__text--accent">favourite tool</span>
+            in Mobile Development. I enjoy using it to <span class="about-me__skills__text--accent">beautify</span> my
+            projects and play with it creating <span class="about-me__skills__text--accent">Flutter illustrations.</span>
           </p>
         </div>
         <!-- sixth skills item -->
