--- a/about-me.html
+++ b/about-me.html
@@ -108,7 +108,7 @@
         <!-- second skills item -->
         <div class="about-me__skills__item">
           <div class="about-me__skills__header">
-            <img class="about-me__skills__logo" src="images/fluter_logo.png" alt="fluter logo">
+            <img class="about-me__skills__logo" src="images/flutter_logo.png" alt="flutter logo">
           </div>
           <div class="about-me__skills__middle">
             <h1 class="about-me__skills__middle__name">Flutter</h1>
