--- a/just-a-pair.html
+++ b/just-a-pair.html
@@ -82,9 +82,9 @@
       <h2 class="project__title project__title--white">Just A Pair<span
           class="contact__title__dot title__dot--white"></span></h2>
       <h3 class="project__description">Online shoe store made with Vue.js and Vuex</h3>
-      <img src="images/jap_1400.jpg" srcset="images/jap_800.jpg 800w,
-                  images/jap_1200.jpg 1200w,
-                  images/jap_1400.jpg 1400w" sizes="(max-width: 320px) 90vw,
+      <img src="images/kita-muslim_1400.jpg" srcset="images/kita-muslim_800.jpg 800w,
+                  images/kita-muslim_1200.jpg 1200w,
+                  images/kita-muslim_1400.jpg 1400w" sizes="(max-width: 320px) 90vw,
                  (max-width: 700px) 90vw,
                  (max-width: 1024px) 75vw, 50vw" class="project__header__img" alt="header image" />
       <div class="project__buttons-container">
