--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
       <div class="portfolio__items-container">
         <div class="portfolio__item" data-name="website">
           <a href="just-a-pair.html">
-            <img src="images/jap.jpg" class="portfolio__item__thumbnail" alt="image hover effects">
-            <h2 class="portfolio__item__info">Just A Pair</h2>
+            <img src="images/kita-muslim.jpg" class="portfolio__item__thumbnail" alt="image hover effects">
+            <h2 class="portfolio__item__info">Kita Muslim</h2>
             <div class="portfolio__item__hover">
-              <h2 class="portfolio__item__hover__title">Website<span
+              <h2 class="portfolio__item__hover__title">Mobile App<span
                   class="portfolio__title__dot title__dot--white"></span>
               </h2>
-              <p class="portfolio__item__hover__description">Online shoe store made with Vue.js</p>
+              <p class="portfolio__item__hover__description">Al-Quran application with dart & flutter</p>
             </div>
           </a>
         </div><!-- END portfolio__item -->
