--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
               <p class="portfolio__item__hover__description">Illustration made with pure CSS.</p>
             </div>
           </a>
-        </div><!-- END portfolio__item --> -->
+        </div><!-- END portfolio__item -->
       </div>
     </section>
     <!-- Contact -->
