--- a/just-a-pair.html
+++ b/just-a-pair.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Dina Blaszczak | Just a Pair</title>
+  <title>Indrat Saputra | Kita Muslim</title>
 
   <link rel="shortcut icon" href="images/icon.ico" type="image/x-icon" /><!-- Favicon -->
   <link rel="icon" href="images/icon.ico" type="image/x-icon" /><!-- Favicon -->
@@ -63,15 +63,15 @@
       </li>
     </ul>
     <hr class="nav-menu__separator">
-    <p class="nav-menu__text">Dina Blaszczak is a front-end developer and designer based in Poland.</p>
+    <p class="nav-menu__text">Indrat Saputra  is a mobile developer  based in Indonesia.</p>
     <p class="nav-menu__email">
-      <a href="mailto:dinablaszczak@outlook.com" class="nav-menu__link--email">dinablaszczak@outlook.com</a>
+      <a href="mailto:indrat.dev@gmail.com" class="nav-menu__link--email">indrat.dev@gmail.com</a>
     </p>
     <div class="nav-menu__social-btn">
-      <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a>
+      <!-- <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a>
       <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a>
+      <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></spa -->n></a>
       <a href="https://github.com/Themalni" target="_blank"><span class="fa fa-github fa-2x"></span></a>
-      <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a>
       <a href="https://www.linkedin.com/in/dina-blaszczak-5b380313a/" target="_blank"><span
           class="fa fa-linkedin-square fa-2x"></span></a>
     </div>
@@ -82,13 +82,13 @@
       <h2 class="project__title project__title--white">Just A Pair<span
           class="contact__title__dot title__dot--white"></span></h2>
       <h3 class="project__description">Online shoe store made with Vue.js and Vuex</h3>
-      <img src="images/kita-muslim_1400.jpg" srcset="images/kita-muslim_800.jpg 800w,
-                  images/kita-muslim_1200.jpg 1200w,
-                  images/kita-muslim_1400.jpg 1400w" sizes="(max-width: 320px) 90vw,
+      <img src="images/kita-muslim-1400.jpg" srcset="images/kita-muslim-800.jpg 800w,
+                  images/kita-muslim-1200.jpg 1200w,
+                  images/kita-muslim-1400.jpg 1400w" sizes="(max-width: 320px) 90vw,
                  (max-width: 700px) 90vw,
                  (max-width: 1024px) 75vw, 50vw" class="project__header__img" alt="header image" />
       <div class="project__buttons-container">
-        <a href="https://just-a-pair.web.app/" target="_blank" class="project__header__btn">Live Demo</a>
+        <!-- <a href="https://just-a-pair.web.app/" target="_blank" class="project__header__btn">Live Demo</a> -->
         <a href="https://github.com/Themalni/just-a-pair" target="_blank" class="project__header__btn">GitHub</a>
       </div>
     </header>
@@ -130,7 +130,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__info__container">
-        <h2 class="footer__copyright">&copy; Dina Blaszczak 2017</h2>
+        <h2 class="footer__copyright">&copy; Indrat Saputra  2017</h2>
         <!-- footer navigation -->
         <ul class="footer-menu__list">
           <li class="footer-menu__list-item">
