--- a/just-a-pair.html
+++ b/just-a-pair.html
@@ -79,9 +79,9 @@
   <div class="project__container">
     <!-- Header -->
     <header class="project__header">
-      <h2 class="project__title project__title--white">Just A Pair<span
+      <h2 class="project__title project__title--white">Kita Muslim<span
           class="contact__title__dot title__dot--white"></span></h2>
-      <h3 class="project__description">Online shoe store made with Vue.js and Vuex</h3>
+      <h3 class="project__description">Al-Quran application with dart & flutter</h3>
       <img src="images/kita-muslim-1400.jpg" srcset="images/kita-muslim-800.jpg 800w,
                   images/kita-muslim-1200.jpg 1200w,
                   images/kita-muslim-1400.jpg 1400w" sizes="(max-width: 320px) 90vw,
