--- a/react-reddit-search.html
+++ b/react-reddit-search.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Dina Blaszczak | React Reddit Search</title>
+  <title>Indrat Saputra | React Reddit Search</title>
 
   <link rel="shortcut icon" href="images/icon.ico" type="image/x-icon" /><!-- Favicon -->
   <link rel="icon" href="images/icon.ico" type="image/x-icon" /><!-- Favicon -->
@@ -63,16 +63,16 @@
       </li>
     </ul>
     <hr class="nav-menu__separator">
-    <p class="nav-menu__text">Dina Blaszczak is a front-end developer and designer based in Poland.</p>
+    <p class="nav-menu__text">Indrat Saputra is a front-end developer and designer based in Poland.</p>
     <p class="nav-menu__email">
       <a href="mailto:dinablaszczak@outlook.com" class="nav-menu__link--email">dinablaszczak@outlook.com</a>
     </p>
     <div class="nav-menu__social-btn">
-      <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a>
-      <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a>
-      <a href="https://github.com/Themalni" target="_blank"><span class="fa fa-github fa-2x"></span></a>
-      <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a>
-      <a href="https://www.linkedin.com/in/dina-blaszczak-5b380313a/" target="_blank"><span
+      <!-- <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a> -->
+      <!-- <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a> -->
+      <a href="https://github.com/indratdev" target="_blank"><span class="fa fa-github fa-2x"></span></a>
+      <!-- <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a> -->
+      <a href="https://id.linkedin.com/in/indrat-saputra-40a08b190/" target="_blank"><span
           class="fa fa-linkedin-square fa-2x"></span></a>
     </div>
   </div>
@@ -89,7 +89,7 @@
                  (max-width: 1024px) 75vw, 50vw" class="project__header__img" alt="header image" />
       <div class="project__buttons-container">
         <a href="https://react-reddit-search-app.web.app/" target="_blank" class="project__header__btn">Live Demo</a>
-        <a href="https://github.com/Themalni/react-reddit-search-app" target="_blank"
+        <a href="https://github.com/indratdev/react-reddit-search-app" target="_blank"
           class="project__header__btn">GitHub</a>
       </div>
     </header>
@@ -123,7 +123,7 @@
           </p>
         </div>
       </div>
-      <a href="just-a-pair.html" class="project__main__btn project__main__btn--previous"><span
+      <a href="kita-muslim.html" class="project__main__btn project__main__btn--previous"><span
           class="project__main__btn__arrow">&larr;</span>Previous</a>
       <a href="vue-career-page.html" class="project__main__btn project__main__btn--next">Next<span
           class="project__main__btn__arrow">&rarr;</span></a>
@@ -131,7 +131,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__info__container">
-        <h2 class="footer__copyright">&copy; Dina Blaszczak 2017</h2>
+        <h2 class="footer__copyright">&copy; Indrat Saputra 2017</h2>
         <!-- footer navigation -->
         <ul class="footer-menu__list">
           <li class="footer-menu__list-item">
@@ -146,11 +146,11 @@
         </ul>
         <!-- footer social buttons -->
         <div class="footer__social-btn">
-          <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a>
-          <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a>
-          <a href="https://github.com/Themalni" target="_blank"><span class="fa fa-github fa-2x"></span></a>
-          <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a>
-          <a href="https://www.linkedin.com/in/dina-blaszczak-5b380313a/" target="_blank"><span
+          <!-- <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a> -->
+          <!-- <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a> -->
+          <a href="https://github.com/indratdev" target="_blank"><span class="fa fa-github fa-2x"></span></a>
+          <!-- <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a> -->
+          <a href="https://id.linkedin.com/in/indrat-saputra-40a08b190/" target="_blank"><span
               class="fa fa-linkedin-square fa-2x"></span></a>
         </div>
       </div>
