--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
       <a href="mailto:indrat.dev@gmail.com" class="nav-menu__link--email">indrat.dev@gmail.com</a>
     </p>
     <div class="nav-menu__social-btn">
-      <!-- <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a> -->
-      <!-- <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a> -->
-      <!-- <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a> -->
+      <!-- <!-- <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a> --> -->
+      <!-- <!-- <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a> --> -->
+      <!-- <!-- <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a> --> -->
       <a href="https://github.com/indratdev" target="_blank"><span class="fa fa-github fa-2x"></span></a>
       <a href="https://id.linkedin.com/in/indrat-saputra-40a08b190/" target="_blank"><span
           class="fa fa-linkedin-square fa-2x"></span></a>
@@ -127,7 +127,7 @@
       <!-- mulai portofolio aplikasi -->
       <div class="portfolio__items-container">
         <div class="portfolio__item" data-name="website">
-          <a href="just-a-pair.html">
+          <a href="kita-muslim.html">
             <img src="images/kita-muslim.jpg" class="portfolio__item__thumbnail" alt="image hover effects">
             <h2 class="portfolio__item__info">Kita Muslim</h2>
             <div class="portfolio__item__hover">
@@ -330,9 +330,9 @@
         <!-- footer social buttons -->
         <div class="footer__social-btn">
 		<!--
-          <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a>
-          <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a>
-		   <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a>
+          <!-- <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a> -->
+          <!-- <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a> -->
+		   <!-- <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a> -->
 		   -->
           <a href="https://github.com/indratdev" target="_blank"><span class="fa fa-github fa-2x"></span></a>
          
