--- a/kita-muslim.html
+++ b/kita-muslim.html
@@ -68,11 +68,11 @@
       <a href="mailto:indrat.dev@gmail.com" class="nav-menu__link--email">indrat.dev@gmail.com</a>
     </p>
     <div class="nav-menu__social-btn">
-      <!-- <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a>
-      <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a>
+      <!-- <!-- <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a> -->
+      <!-- <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a> -->
       <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></spa -->n></a>
-      <a href="https://github.com/Themalni" target="_blank"><span class="fa fa-github fa-2x"></span></a>
-      <a href="https://www.linkedin.com/in/dina-blaszczak-5b380313a/" target="_blank"><span
+      <a href="https://github.com/indratdev" target="_blank"><span class="fa fa-github fa-2x"></span></a>
+      <a href="https://id.linkedin.com/in/indrat-saputra-40a08b190/" target="_blank"><span
           class="fa fa-linkedin-square fa-2x"></span></a>
     </div>
   </div>
@@ -89,7 +89,7 @@
                  (max-width: 1024px) 75vw, 50vw" class="project__header__img" alt="header image" />
       <div class="project__buttons-container">
         <!-- <a href="https://just-a-pair.web.app/" target="_blank" class="project__header__btn">Live Demo</a> -->
-        <a href="https://github.com/Themalni/just-a-pair" target="_blank" class="project__header__btn">GitHub</a>
+        <a href="https://github.com/indratdev/just-a-pair" target="_blank" class="project__header__btn">GitHub</a>
       </div>
     </header>
     <!-- Main -->
@@ -98,39 +98,34 @@
         <!-- Project Description -->
         <div class="project__flex__item">
           <h2 class="project__flex__title">Project description</h2>
-          <p class="project__flex__text">E-commerce website to sell and advertise shoes.</p>
-          <p class="project__flex__text">In this project I used Vue.js to make it a SPA, Vuex to manage state of the
-            website
-            and Firebase for the authentication and data storage.</p>
+          <p class="project__flex__text">Al-Quran Application with audio, reading and translation along with a collection of prayers and hadiths</p>
+          <p class="project__flex__text">My Muslim application can be one that you can choose to download on your device because it offers the Koran and translations, daily prayers, hadiths and letters that can be marked as favorites so that it is very easy for Muslims to worship.</p>
         </div>
         <div class="project__flex__item">
           <h2 class="project__flex__title">Role</h2>
           <p class="project__flex__text">Design and development of the project.</p>
           <h2 class="project__flex__title">Challenge:</h2>
-          <p class="project__flex__text">Connect all the parts of the store like product page, size selection, shopping
-            cart
-            and make it fully functional.</p>
+          <p class="project__flex__text">Connect the Al-Quran data into the mobile application, download the audio of the letter, design the appearance of the application</p>
           <h2 class="project__flex__title">Skills</h2>
           <p class="project__flex__text">
+            <span class="project__flex__skill">Mobile Development</span>
             <span class="project__flex__skill">Design</span>
-            <span class="project__flex__skill">Web development</span>
             <span class="project__flex__skill">Responsive</span>
-            <span class="project__flex__skill project__flex__skill--pink">HTML</span>
-            <span class="project__flex__skill project__flex__skill--pink">CSS</span>
-            <span class="project__flex__skill project__flex__skill--pink">JavaScript</span>
-            <span class="project__flex__skill project__flex__skill--pink">Vue.js</span>
-            <span class="project__flex__skill project__flex__skill--pink">Vuex</span>
-            <span class="project__flex__skill project__flex__skill--pink">Firebase</span>
+            <span class="project__flex__skill">Native App</span>
+            <span class="project__flex__skill project__flex__skill--pink">Dart</span>
+            <span class="project__flex__skill project__flex__skill--pink">Flutter</span>
+            <span class="project__flex__skill project__flex__skill--pink">API</span>
+            <span class="project__flex__skill project__flex__skill--pink">BLOC</span>           
           </p>
         </div>
       </div>
-      <a href="react-reddit-search.html" class="project__main__btn project__main__btn--next">Next<span
-          class="project__main__btn__arrow">&rarr;</span></a>
+      <!-- <a href="react-reddit-search.html" class="project__main__btn project__main__btn--next">Next<span
+          class="project__main__btn__arrow">&rarr;</span></a> -->
     </main>
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__info__container">
-        <h2 class="footer__copyright">&copy; Indrat Saputra  2017</h2>
+        <h2 class="footer__copyright">&copy; Indrat Saputra  2022</h2>
         <!-- footer navigation -->
         <ul class="footer-menu__list">
           <li class="footer-menu__list-item">
@@ -145,11 +140,11 @@
         </ul>
         <!-- footer social buttons -->
         <div class="footer__social-btn">
-          <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a>
-          <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a>
-          <a href="https://github.com/Themalni" target="_blank"><span class="fa fa-github fa-2x"></span></a>
-          <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a>
-          <a href="https://www.linkedin.com/in/dina-blaszczak-5b380313a/" target="_blank"><span
+          <!-- <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a> -->
+          <!-- <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a> -->
+          <!-- <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a> -->
+          <a href="https://github.com/indratdev" target="_blank"><span class="fa fa-github fa-2x"></span></a>
+          <a href="https://id.linkedin.com/in/indrat-saputra-40a08b190/" target="_blank"><span
               class="fa fa-linkedin-square fa-2x"></span></a>
         </div>
       </div>
