--- a/pomodoro-clock-app.html
+++ b/pomodoro-clock-app.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=10; IE=11; IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
-  <meta name="author" content="Dina Blaszczak">
+  <meta name="author" content="Indrat Saputra">
 
-  <title>Dina Blaszczak | Pomodoro Clock App</title>
+  <title>Indrat Saputra | Pomodoro Clock App</title>
 
   <link rel="shortcut icon" href="images/icon.ico" type="image/x-icon"/><!-- Favicon -->
   <link rel="icon" href="images/icon.ico" type="image/x-icon"/><!-- Favicon -->
@@ -59,16 +59,16 @@
         </li>
       </ul>
       <hr class="nav-menu__separator">
-      <p class="nav-menu__text">Dina Blaszczak is a front-end developer and designer based in Poland.</p>
+      <p class="nav-menu__text">Indrat Saputra is a front-end developer and designer based in Poland.</p>
       <p class="nav-menu__email">
         <a href="mailto:dinablaszczak@outlook.com" class="nav-menu__link--email">dinablaszczak@outlook.com</a>
       </p>
       <div class="nav-menu__social-btn">
-        <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a>
-        <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a>
-        <a href="https://github.com/Themalni" target="_blank"><span class="fa fa-github fa-2x"></span></a>
-        <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a>
-        <a href="https://www.linkedin.com/in/dina-blaszczak-5b380313a/" target="_blank"><span class="fa fa-linkedin-square fa-2x"></span></a>
+        <!-- <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a> -->
+        <!-- <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a> -->
+        <a href="https://github.com/indratdev" target="_blank"><span class="fa fa-github fa-2x"></span></a>
+        <!-- <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a> -->
+        <a href="https://id.linkedin.com/in/indrat-saputra-40a08b190/" target="_blank"><span class="fa fa-linkedin-square fa-2x"></span></a>
       </div>
     </div>
   <div class="project__container">
@@ -86,7 +86,7 @@
             alt="header image"/>
       <div class="project__buttons-container">
         <a href="https://themalni.github.io/pomodoro-clock/" target="_blank" class="project__header__btn">Live Demo</a>
-        <a href="https://github.com/Themalni/pomodoro-clock" target="_blank" class="project__header__btn">GitHub</a>
+        <a href="https://github.com/indratdev/pomodoro-clock" target="_blank" class="project__header__btn">GitHub</a>
       </div>
     </header>
     <!-- Main -->
@@ -123,7 +123,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__info__container">
-        <h2 class="footer__copyright">&copy; Dina Blaszczak 2017</h2>
+        <h2 class="footer__copyright">&copy; Indrat Saputra 2017</h2>
         <!-- footer navigation -->
         <ul class="footer-menu__list">
           <li class="footer-menu__list-item">
@@ -138,11 +138,11 @@
         </ul>
         <!-- footer social buttons -->
         <div class="footer__social-btn">
-          <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a>
-          <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a>
-          <a href="https://github.com/Themalni" target="_blank"><span class="fa fa-github fa-2x"></span></a>
-          <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a>
-          <a href="https://www.linkedin.com/in/dina-blaszczak-5b380313a/" target="_blank"><span class="fa fa-linkedin-square fa-2x"></span></a>
+          <!-- <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a> -->
+          <!-- <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a> -->
+          <a href="https://github.com/indratdev" target="_blank"><span class="fa fa-github fa-2x"></span></a>
+          <!-- <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a> -->
+          <a href="https://id.linkedin.com/in/indrat-saputra-40a08b190/" target="_blank"><span class="fa fa-linkedin-square fa-2x"></span></a>
         </div>
       </div>
     </footer>
