--- a/about-me.html
+++ b/about-me.html
@@ -76,10 +76,9 @@
     </p>
     <div class="nav-menu__social-btn">
 	<!--
-      <!-- <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a> -->
+      <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a> -->
       <!-- <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a> -->
-      <!-- <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a> -->
-	  -->
+      <!--  <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a> -->
 	  <a href="https://github.com/indratdev" target="_blank"><span class="fa fa-github fa-2x"></span></a>
       <a href="#" target="_blank"><span class="fa fa-linkedin-square fa-2x"></span></a>
     </div>
@@ -103,7 +102,7 @@
           </div>
           <p class="about-me__skills__text">I'm up to building fully <span
               class="about-me__skills__text--accent">responsive</span> mobile applications using <span
-              class="about-me__skills__text--accent">plain DART</span> </p>
+              class="about-me__skills__text--accent">DART</span> </p>
         </div>
         <!-- second skills item -->
         <div class="about-me__skills__item">
@@ -121,88 +120,82 @@
         <!-- sixth skills item -->
         <div class="about-me__skills__item">
           <div class="about-me__skills__header">
-            <img class="about-me__skills__logo" src="images/sass_large.png" alt="Sass logo">
+            <img class="about-me__skills__logo" src="images/android-icon.svg" alt="Android icon">
           </div>
           <div class="about-me__skills__middle">
-            <h1 class="about-me__skills__middle__name">Sass</h1>
+            <h1 class="about-me__skills__middle__name">Android</h1>
           </div>
-          <p class="about-me__skills__text">I'm amazed by the <span class="about-me__skills__text--accent">power</span>
-            of Sass. I enjoy using it to <span class="about-me__skills__text--accent">cut down</span> on lines of code
-            and the time of a <span class="about-me__skills__text--accent">project maintenance</span>.</p>
+          <p class="about-me__skills__text">Android is a  <span class="about-me__skills__text--accent">mobile operating system</span>
+            based on a modified version of the Linux kernel and other <span class="about-me__skills__text--accent">open source software</span> , designed primarily for touchscreen mobile devices such as  <span class="about-me__skills__text--accent">smartphones and tablets</span>.</p>
         </div>
         <!-- fith skills item -->
         <div class="about-me__skills__item">
           <div class="about-me__skills__header">
-            <img class="about-me__skills__logo" src="images/bootstrap_large.png" alt="Bootstrap logo">
+            <img class="about-me__skills__logo" src="images/firebase-icon.svg" alt="Firebase icon">
           </div>
           <div class="about-me__skills__middle">
-            <h1 class="about-me__skills__middle__name">Bootstrap</h1>
+            <h1 class="about-me__skills__middle__name">Firebase</h1>
           </div>
-          <p class="about-me__skills__text">Fully <span class="about-me__skills__text--accent">responsive website</span>
-            with some sliders, modal windows and a <span class="about-me__skills__text--accent">custom grid</span> are
-            not a problem for me to build.</p>
+          <p class="about-me__skills__text">Firebase <span class="about-me__skills__text--accent">is Google’s mobile application development platform  </span>
+            that helps you build, improve, and grow your app. <span class="about-me__skills__text--accent"></span> .</p>
         </div>
         <!-- third skills item -->
         <div class="about-me__skills__item">
           <div class="about-me__skills__header">
-            <img class="about-me__skills__logo" src="images/js_large.png" alt="JavaScript logo">
+            <img class="about-me__skills__logo" src="images/flutter-logo.png" alt="Flutter logo">
           </div>
           <div class="about-me__skills__middle">
-            <h1 class="about-me__skills__middle__name">JavaScript</h1>
+            <h1 class="about-me__skills__middle__name">Flutter</h1>
           </div>
-          <p class="about-me__skills__text">I've a <span class="about-me__skills__text--accent">solid</span> knowledge
-            of <span class="about-me__skills__text--accent">JS</span> including <span
-              class="about-me__skills__text--accent">ES6</span> and improve it daily by using it to <span
-              class="about-me__skills__text--accent">refactor</span> some old projects and building new ones.</p>
+          <p class="about-me__skills__text">Flutter <span class="about-me__skills__text--accent">solid</span> is an open-source UI software development kit created by Google.<span class="about-me__skills__text--accent"> It is used to develop cross platform applications</span>  for Android, iOS, Linux, macOS, Windows, Google Fuchsia, and the web from a single codebase. <span
+              class="about-me__skills__text--accent"></span> First described in 2015, Flutter was released <span
+              class="about-me__skills__text--accent">in May 2017</span> .</p>
         </div>
         <!-- sixth skills item -->
         <div class="about-me__skills__item">
           <div class="about-me__skills__header">
-            <img class="about-me__skills__logo" src="images/vue.png" alt="Vue logo">
+            <img class="about-me__skills__logo" src="images/git-icon.svg" alt="Git icon">
           </div>
           <div class="about-me__skills__middle">
-            <h1 class="about-me__skills__middle__name">Vue</h1>
+            <h1 class="about-me__skills__middle__name">Git</h1>
           </div>
-          <p class="about-me__skills__text">I'm in <span class="about-me__skills__text--accent">love</span> with Vue!
-            This is by far my <span class="about-me__skills__text--accent">favourite</span> framework, not to mention
-            the beautifully written <span class="about-me__skills__text--accent">documentation.</span></p>
+          <p class="about-me__skills__text">Git is free and <span class="about-me__skills__text--accent">open source </span> software for distributed version control: <span class="about-me__skills__text--accent"></span> tracking changes in any set of files, usually used for coordinating work among programmers collaboratively developing source code during software development.<span class="about-me__skills__text--accent"></span></p>
         </div>
         <!-- forth skills item -->
         <div class="about-me__skills__item">
           <div class="about-me__skills__header">
-            <img class="about-me__skills__logo" src="images/react_logo.png" alt="React logo">
+            <img class="about-me__skills__logo" src="images/mysql-icon.svg" alt="Mysql logo">
           </div>
           <div class="about-me__skills__middle">
-            <h1 class="about-me__skills__middle__name">React</h1>
+            <h1 class="about-me__skills__middle__name">MYSQL</h1>
           </div>
-          <p class="about-me__skills__text">Learned <span class="about-me__skills__text--accent">fundamentals</span> of
-            this library and used it together with <span class="about-me__skills__text--accent">Redux</span> and <span
-              class="about-me__skills__text--accent">Styled Components</span> in one of
-            the projects.</p>
+          <p class="about-me__skills__text">MySQL is an Oracle-backed open source relational database management system (RDBMS) based on Structured Query Language (SQL). MySQL runs on virtually all platforms, including Linux, UNIX and Windows. Although it can be used in a wide range of applications, MySQL is most often associated with web applications and online publishing. 
+           <span class="about-me__skills__text--accent"> </span> of
+            <span class="about-me__skills__text--accent"> </span>  <span
+              class="about-me__skills__text--accent"> </span>  </p>
         </div>
         <!-- fith skills item -->
         <div class="about-me__skills__item">
           <div class="about-me__skills__header">
-            <img class="about-me__skills__logo" src="images/jquery_large.png" alt="jQuery logo">
+            <img class="about-me__skills__logo" src="images/oracle-icon.svg" alt="Oracle logo">
           </div>
           <div class="about-me__skills__middle">
-            <h1 class="about-me__skills__middle__name">jQuery</h1>
+            <h1 class="about-me__skills__middle__name">Oracle</h1>
           </div>
-          <p class="about-me__skills__text">I can <span class="about-me__skills__text--accent">manipulate DOM</span>
-            with jQuery along with adding some <span class="about-me__skills__text--accent">animations</span> and other
-            functionality to a page or an app.</p>
+          <p class="about-me__skills__text">Oracle Database is an RDBMS. An RDBMS that implements object-oriented features such as user-defined types, inheritance, and polymorphism is called an object-relational database management system (ORDBMS).<span class="about-me__skills__text--accent"> </span>
+             <span class="about-me__skills__text--accent"> </span> </p>
         </div>
         <!-- seventh skills item -->
         <div class="about-me__skills__item">
           <div class="about-me__skills__header">
-            <img class="about-me__skills__logo" src="images/AngularJS.png" alt="AngularJS logo">
+            <img class="about-me__skills__logo" src="images/sqlite-icon.svg" alt="SQLite logo">
           </div>
           <div class="about-me__skills__middle">
-            <h1 class="about-me__skills__middle__name">AngularJS</h1>
+            <h1 class="about-me__skills__middle__name">SQLite</h1>
           </div>
-          <p class="about-me__skills__text">I know the <span class="about-me__skills__text--accent">fundamentals</span>
-            of this framework. I've used it in a small personal project and got to know its <span
-              class="about-me__skills__text--accent">structure</span> and features.</p>
+          <p class="about-me__skills__text">SQLite is an in-process library that implements a self-contained, serverless, zero-configuration, transactional SQL database engine. The code for SQLite is in the public domain and is thus free for use for any purpose, commercial or private. SQLite is the most widely deployed database in the world with more applications than we can count, including several high-profile projects. <span class="about-me__skills__text--accent"> </span>
+             <span
+              class="about-me__skills__text--accent"> </span> </p>
         </div>
         <!-- seventh skills item -->
         <div class="about-me__skills__item">
@@ -230,7 +223,7 @@
               class="about-me__skills__text--accent">tools</span>.</p>
         </div>
         <!-- nineth skills item -->
-        <div class="about-me__skills__item">
+        <!-- <div class="about-me__skills__item">
           <div class="about-me__skills__header">
             <img class="about-me__skills__logo" src="images/gimp_large.png" alt="GIMP logo">
           </div>
@@ -241,7 +234,7 @@
               class="about-me__skills__text--accent">tutorials</span> to share my <span
               class="about-me__skills__text--accent">knowledge</span> with others. I can do a lot of <span
               class="about-me__skills__text--accent">cool</span> things in GIMP!</p>
-        </div>
+        </div> -->
         <!-- tenth skills item -->
 
       </div><!-- END skills flex -->
@@ -255,9 +248,8 @@
               Story</h2>
             <h4 class="about-me__biography__description">...how it all started</h4>
           </div>
-          <p class="about-me__biography__text"><span class="about-me__first-letter">My</span> coding journey started in
-            summer 2015. For years I've had an active interest in the web and modern technology. Being fascinated with
-            its continuous fast progress I set myself for a challenge to become a Web Developer.</p>
+          <p class="about-me__biography__text"><span class="about-me__first-letter">My</span>coding journey begins in 2021, with my interest in making mobile applications and very interested in exploring application development when the covid-19 disease is rampant
+and make all the work to adapt more than technology especially about mobile technology. With the development of technology in all fields, the progress of mobile phone applications is also growing rapidly.</p>
           <p class="about-me__biography__text">I enjoy being a lifetime learner. I love creating something out of
             nothing by mixing up my knowledge, skills and imagination. The more days I see behind while learning to
             code, the more I fall in love with the new profession I chose to do for a living. In fact, I call it now my
@@ -276,16 +268,12 @@
           <p class="about-me__biography__text"><span class="about-me__first-letter">I</span> enjoy the process of
             building the web products from scratch. Solving problems and finding the best solutions is a creative
             process which often pushes us leaving our comfort zone and this is when we are growing, aren't we?</p>
-          <p class="about-me__biography__text">I chose Front End Development because it allows me to work closely with
-            design. Having background in photography and digital illustrations I am pulled towards visual aspect of web
-            development. It's amazing to be able to take a design and turn it into a functional product for people to
-            use and enjoy.</p>
-          <p class="about-me__biography__text">All my projects are fully responsive. Turning my work into a good user
-            experience on mobile devices is my priority and I take a great care of it.</p>
+          <p class="about-me__biography__text">I chose Mobile Development because apps is a lot more flexible, which allows developers more space to experiment and innovate. Choosing a mobile application development platform for Android & IOS encourages new ideas, and is instrumental in creating applications that add previously unmatched value into users’ lives.</p>
+          <p class="about-me__biography__text">All my projects are fully responsive.</p>
           <button class="about-me__more" data-name="item-two-more">read more</button>
         </div>
         <!-- Hobbies  -->
-        <div class="about-me__biography__item" id="item__three">
+        <!-- <div class="about-me__biography__item" id="item__three">
           <div class="about-me__biography__header">
             <img class="about-me__biography__header__icon" src="images/camera_biography.svg" alt="hobbies icon">
             <h2 class="about-me__title about-me__title--small">Hobbies</h2>
@@ -301,7 +289,7 @@
           <p class="about-me__biography__text">If you have any questions or would like to have a chat about coding, just
             drop me a line or two. I'm keen on meeting new like-minded people.</p>
           <button class="about-me__more" data-name="item-three-more">read more</button>
-        </div>
+        </div> -->
       </div><!-- END biography flex -->
     </main>
     <div class="about-me__email__container">
@@ -311,7 +299,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__info__container">
-        <h2 class="footer__copyright">&copy; Indrat Saputra 2012</h2>
+        <h2 class="footer__copyright">&copy; Indrat Saputra 2022</h2>
         <!-- footer navigation -->
         <ul class="footer-menu__list">
           <li class="footer-menu__list-item">
@@ -329,7 +317,7 @@
           <!-- <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a> -->
           <!-- <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a> -->
           <a href="https://github.com/indratdev" target="_blank"><span class="fa fa-github fa-2x"></span></a>
-          <!-- <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a> -->
+          <!--  <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a> --> -->
           <a href="#" target="_blank"><span class="fa fa-linkedin-square fa-2x"></span></a>
         </div>
       </div>
