--- a/character-limiter-app.html
+++ b/character-limiter-app.html
@@ -71,7 +71,7 @@
       <!-- <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a> -->
       <!-- <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a> -->
       <a href="https://github.com/indratdev" target="_blank"><span class="fa fa-github fa-2x"></span></a>
-      <!-- <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a> -->
+      <!--  <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a> --> -->
       <a href="https://id.linkedin.com/in/indrat-saputra-40a08b190/" target="_blank"><span
           class="fa fa-linkedin-square fa-2x"></span></a>
     </div>
@@ -145,7 +145,7 @@
           <!-- <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a> -->
           <!-- <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a> -->
           <a href="https://github.com/indratdev" target="_blank"><span class="fa fa-github fa-2x"></span></a>
-          <!-- <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a> -->
+          <!--  <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a> --> -->
           <a href="https://id.linkedin.com/in/indrat-saputra-40a08b190/" target="_blank"><span
               class="fa fa-linkedin-square fa-2x"></span></a>
         </div>
