--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       </div>
       <!-- mulai portofolio aplikasi -->
       <div class="portfolio__items-container">
-        <div class="portfolio__item" data-name="website">
+        <div class="portfolio__item" data-name="on-google-play-btn">
           <a href="kita-muslim.html">
             <img src="images/kita-muslim.jpg" class="portfolio__item__thumbnail" alt="image hover effects">
             <h2 class="portfolio__item__info">Kita Muslim</h2>
@@ -138,16 +138,16 @@
             </div>
           </a>
         </div><!-- END portfolio__item -->
-        <!-- 
-        <div class="portfolio__item" data-name="app">
+        
+        <div class="portfolio__item" data-name="on-github-btn">
           <a href="react-reddit-search.html">
             <img src="images/react_reddit.jpg" class="portfolio__item__thumbnail" alt="image hover effects">
-            <h2 class="portfolio__item__info">React Reddit Search</h2>
+            <h2 class="portfolio__item__info">News Application</h2>
             <div class="portfolio__item__hover">
-              <h2 class="portfolio__item__hover__title">Web App<span
+              <h2 class="portfolio__item__hover__title">Mobile App<span
                   class="portfolio__title__dot title__dot--white"></span>
               </h2>
-              <p class="portfolio__item__hover__description">Application to search Reddit.</p>
+              <p class="portfolio__item__hover__description">News Application</p>
             </div>
           </a>
         </div><!-- END portfolio__item 
@@ -272,7 +272,7 @@
               <p class="portfolio__item__hover__description">Illustration made with pure CSS.</p>
             </div>
           </a>
-        </div><!-- END portfolio__item -->
+        </div><!-- END portfolio__item
       </div>
     </section>
     <!-- Contact -->
