--- a/kita-muslim.html
+++ b/kita-muslim.html
@@ -97,7 +97,7 @@
       <div class="project__flex">
         <!-- Project Description -->
         <div class="project__flex__item">
-          <h2 class="project__flex__title">Project description</h2>
+          <h2 class="project__flex__title">Project Description</h2>
           <p class="project__flex__text">Al-Quran Application with audio, reading and translation along with a collection of prayers and hadiths</p>
           <p class="project__flex__text">My Muslim application can be one that you can choose to download on your device because it offers the Koran and translations, daily prayers, hadiths and letters that can be marked as favorites so that it is very easy for Muslims to worship.</p>
         </div>
