--- a/fun-facts-app.html
+++ b/fun-facts-app.html
@@ -63,9 +63,9 @@
       </li>
     </ul>
     <hr class="nav-menu__separator">
-    <p class="nav-menu__text">Indrat Saputra is a front-end developer and designer based in Poland.</p>
+    <p class="nav-menu__text">Indrat Saputra is a front-end developer and designer based in Indonesia.</p>
     <p class="nav-menu__email">
-      <a href="mailto:dinablaszczak@outlook.com" class="nav-menu__link--email">dinablaszczak@outlook.com</a>
+      <a href="mailto:indrat.dev@gmail.com" class="nav-menu__link--email">indrat.dev@gmail.com</a>
     </p>
     <div class="nav-menu__social-btn">
       <!-- <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a> -->
@@ -127,7 +127,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__info__container">
-        <h2 class="footer__copyright">&copy; Indrat Saputra 2017</h2>
+        <h2 class="footer__copyright">&copy; Indrat Saputra 2022</h2>
         <!-- footer navigation -->
         <ul class="footer-menu__list">
           <li class="footer-menu__list-item">
