--- a/react-reddit-search.html
+++ b/react-reddit-search.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Indrat Saputra | React Reddit Search</title>
+  <title>Indrat Saputra | News Application</title>
 
   <link rel="shortcut icon" href="images/icon.ico" type="image/x-icon" /><!-- Favicon -->
   <link rel="icon" href="images/icon.ico" type="image/x-icon" /><!-- Favicon -->
@@ -63,9 +63,9 @@
       </li>
     </ul>
     <hr class="nav-menu__separator">
-    <p class="nav-menu__text">Indrat Saputra is a front-end developer and designer based in Poland.</p>
+    <p class="nav-menu__text">Indrat Saputra is a mobile developer based in Indonesia.</p>
     <p class="nav-menu__email">
-      <a href="mailto:dinablaszczak@outlook.com" class="nav-menu__link--email">dinablaszczak@outlook.com</a>
+      <a href="mailto:indrat.dev@gmail.com" class="nav-menu__link--email">indrat.dev@gmail.com</a>
     </p>
     <div class="nav-menu__social-btn">
       <!-- <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a> -->
@@ -79,18 +79,18 @@
   <div class="project__container">
     <!-- Header -->
     <header class="project__header">
-      <h2 class="project__title project__title--white">React Reddit Search<span
+      <h2 class="project__title project__title--white">News Application<span
           class="contact__title__dot title__dot--white"></span></h2>
-      <h3 class="project__description">Application to search Reddit using React.js, Redux and Styled Components.</h3>
+      <h3 class="project__description">Application to search news</h3>
       <img src="images/react_reddit_1400.jpg" srcset="images/react_reddit_800.jpg 800w,
                   images/react_reddit_1200.jpg 1200w,
                   images/react_reddit_1400.jpg 1400w" sizes="(max-width: 320px) 90vw,
                  (max-width: 700px) 90vw,
                  (max-width: 1024px) 75vw, 50vw" class="project__header__img" alt="header image" />
       <div class="project__buttons-container">
-        <a href="https://react-reddit-search-app.web.app/" target="_blank" class="project__header__btn">Live Demo</a>
-        <a href="https://github.com/indratdev/react-reddit-search-app" target="_blank"
-          class="project__header__btn">GitHub</a>
+        <!-- <a href="https://react-reddit-search-app.web.app/" target="_blank" class="project__header__btn">Live Demo</a> -->
+        <!-- <a href="https://github.com/indratdev/react-reddit-search-app" target="_blank"
+          class="project__header__btn">GitHub</a> -->
       </div>
     </header>
     <!-- Main -->
@@ -99,39 +99,36 @@
         <!-- Project Description -->
         <div class="project__flex__item">
           <h2 class="project__flex__title">Project description</h2>
-          <p class="project__flex__text">React app to find posts on Reddit using its API. </p>
-          <p class="project__flex__text">In this project I used React.js to make it a SPA, Redux to manage state of the
-            app
-            and Styled Components to build the components system for the app.</p>
+          <p class="project__flex__text">News app to find news using its API. </p>
+          <p class="project__flex__text">In this project I used public API to get all information of news</p>
         </div>
         <div class="project__flex__item">
           <h2 class="project__flex__title">Role</h2>
           <p class="project__flex__text">Design and development of the project.</p>
           <h2 class="project__flex__title">Challenge:</h2>
-          <p class="project__flex__text">Pull data from Reddit using its API and display it on the page.</p>
+          <p class="project__flex__text">Pull data from public source using its API and display it on the page.</p>
           <h2 class="project__flex__title">Skills</h2>
           <p class="project__flex__text">
+            <span class="project__flex__skill">Mobile Development</span>
             <span class="project__flex__skill">Design</span>
-            <span class="project__flex__skill">Web development</span>
             <span class="project__flex__skill">Responsive</span>
-            <span class="project__flex__skill project__flex__skill--pink">HTML</span>
-            <span class="project__flex__skill project__flex__skill--pink">CSS</span>
-            <span class="project__flex__skill project__flex__skill--pink">JavaScript</span>
-            <span class="project__flex__skill project__flex__skill--pink">React.js</span>
-            <span class="project__flex__skill project__flex__skill--pink">Redux</span>
-            <span class="project__flex__skill project__flex__skill--pink">Styled Components</span>
+            <span class="project__flex__skill">Native App</span>
+            <span class="project__flex__skill project__flex__skill--pink">Dart</span>
+            <span class="project__flex__skill project__flex__skill--pink">Flutter</span>
+            <span class="project__flex__skill project__flex__skill--pink">API</span>
+            <span class="project__flex__skill project__flex__skill--pink">BLOC</span>               
           </p>
         </div>
       </div>
-      <a href="kita-muslim.html" class="project__main__btn project__main__btn--previous"><span
+      <!-- <a href="kita-muslim.html" class="project__main__btn project__main__btn--previous"><span
           class="project__main__btn__arrow">&larr;</span>Previous</a>
       <a href="vue-career-page.html" class="project__main__btn project__main__btn--next">Next<span
-          class="project__main__btn__arrow">&rarr;</span></a>
+          class="project__main__btn__arrow">&rarr;</span></a> -->
     </main>
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__info__container">
-        <h2 class="footer__copyright">&copy; Indrat Saputra 2017</h2>
+        <h2 class="footer__copyright">&copy; Indrat Saputra 2022</h2>
         <!-- footer navigation -->
         <ul class="footer-menu__list">
           <li class="footer-menu__list-item">
