--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
         </div><!-- END portfolio__item -->
         
         <div class="portfolio__item" data-name="on-github-btn">
-          <a href="react-reddit-search.html">
-            <img src="images/react_reddit.jpg" class="portfolio__item__thumbnail" alt="image hover effects">
+          <a href="news-app.html">
+            <img src="images/news-app.jpg" class="portfolio__item__thumbnail" alt="image hover effects">
             <h2 class="portfolio__item__info">News Application</h2>
             <div class="portfolio__item__hover">
               <h2 class="portfolio__item__hover__title">Mobile App<span
