--- a/kita-muslim.html
+++ b/kita-muslim.html
@@ -119,7 +119,7 @@
           </p>
         </div>
       </div>
-      <!-- <a href="react-reddit-search.html" class="project__main__btn project__main__btn--next">Next<span
+      <!-- <a href="news-app.html" class="project__main__btn project__main__btn--next">Next<span
           class="project__main__btn__arrow">&rarr;</span></a> -->
     </main>
     <!-- Footer -->
