--- a/vue-career-page.html
+++ b/vue-career-page.html
@@ -63,7 +63,7 @@
       </li>
     </ul>
     <hr class="nav-menu__separator">
-    <p class="nav-menu__text">Indrat Saputra is a front-end developer and designer based in Indonesia.</p>
+    <p class="nav-menu__text">Indrat Saputra is a mobile developer based in Indonesia.</p>
     <p class="nav-menu__email">
       <a href="mailto:indrat.dev@gmail.com" class="nav-menu__link--email">indrat.dev@gmail.com</a>
     </p>
@@ -121,7 +121,7 @@
           </p>
         </div>
       </div>
-      <a href="react-reddit-search.html" class="project__main__btn project__main__btn--previous"><span
+      <a href="news-app.html" class="project__main__btn project__main__btn--previous"><span
           class="project__main__btn__arrow">&larr;</span>Previous</a>
       <a href="fun-facts-app.html" class="project__main__btn project__main__btn--next">Next<span
           class="project__main__btn__arrow">&rarr;</span></a>
