--- a/image-hover-effects.html
+++ b/image-hover-effects.html
@@ -63,7 +63,7 @@
       </li>
     </ul>
     <hr class="nav-menu__separator">
-    <p class="nav-menu__text">Indrat Saputra is a front-end developer and designer based in Indonesia.</p>
+    <p class="nav-menu__text">Indrat Saputra is a mobile developer based in Indonesia.</p>
     <p class="nav-menu__email">
       <a href="mailto:indrat.dev@gmail.com" class="nav-menu__link--email">indrat.dev@gmail.com</a>
     </p>
