--- a/react-reddit-search.html
+++ b/react-reddit-search.html
@@ -82,9 +82,9 @@
       <h2 class="project__title project__title--white">News Application<span
           class="contact__title__dot title__dot--white"></span></h2>
       <h3 class="project__description">Application to search news</h3>
-      <img src="images/react_reddit_1400.jpg" srcset="images/react_reddit_800.jpg 800w,
-                  images/react_reddit_1200.jpg 1200w,
-                  images/react_reddit_1400.jpg 1400w" sizes="(max-width: 320px) 90vw,
+      <img src="images/news-app_1400.jpg" srcset="images/news-app_800.jpg 800w,
+                  images/news-app_1200.jpg 1200w,
+                  images/news-app_1400.jpg 1400w" sizes="(max-width: 320px) 90vw,
                  (max-width: 700px) 90vw,
                  (max-width: 1024px) 75vw, 50vw" class="project__header__img" alt="header image" />
       <div class="project__buttons-container">
@@ -98,7 +98,7 @@
       <div class="project__flex">
         <!-- Project Description -->
         <div class="project__flex__item">
-          <h2 class="project__flex__title">Project description</h2>
+          <h2 class="project__flex__title">Project Description</h2>
           <p class="project__flex__text">News app to find news using its API. </p>
           <p class="project__flex__text">In this project I used public API to get all information of news</p>
         </div>
@@ -146,7 +146,7 @@
           <!-- <a href="https://twitter.com/TheMalni" target="_blank"><span class="fa fa-twitter fa-2x"></span></a> -->
           <!-- <a href="https://codepen.io/themalni" target="_blank"><span class="fa fa-codepen fa-2x"></span></a> -->
           <a href="https://github.com/indratdev" target="_blank"><span class="fa fa-github fa-2x"></span></a>
-          <!--  <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a> --> -->
+          <!--  <a href="https://youtube.com/user/TheMalni" target="_blank"><span class="fa fa-youtube fa-2x"></span></a> -->
           <a href="https://id.linkedin.com/in/indrat-saputra-40a08b190/" target="_blank"><span
               class="fa fa-linkedin-square fa-2x"></span></a>
         </div>
